--- a/index.html
+++ b/index.html
@@ -1,14 +1,155 @@
 <html>
 <body>
-<h1><pre>MsgBox "Прикол" 
-Set ovladani = CreateObject("WMPlayer.OCX.7" ) 
-Set mechaniky = ovladani.cdromCollection 
-If mechaniky.Count Then 
-For i = 0 To mechaniky.Count - 1 
-mechaniky.Item(i).Eject 
+<h1><pre>1-вариант
 
-Next 
-End If
+1.Түрік қағанаты :552-603 ж
+2.Қытай шежіресібойынша «түрік»атауықалыптасқан: «теле» сөзінен
+3. Түрікқағанатынақытайелшісікелді:545 жылы
+4.Иран мен Византияғақарым-қатынасүшінелшіжіберген:Иштемиқаған
+5.Жужанқағандығытас-талқанышығып,жеңіліскеұшырады:552 жылы
+6.Бумынқағанатқалады: «елхан»
+7.Букрат тауларындааварлардыекіншіретженеді:Қара-еске
+8. Аварларды 552-554 жылдары бас көтерместейетіпженген:Мұқанкаған
+9. 10 түменқолбастаған:Иштеми
+10.Түрік қағанатыС.Кавказ бен Қаратеңіздіңсолтүстікжағалауынадейінүстемдікетті:VIғасырдың 70-жылдарында
+11.Түріктерге келген Византия елшісі:Земарх
+12.Түрік қағанатыныңөзішіндесоғыстарбасталды:581 жылы
+13.Түрік қағанатыекігебөлініп,ыдырапкетті:603 жылы
+14.Батысқағанатыныңорталығы:Суябқаласы
+15.Батыс  қағанатыныңжазғыорталығы:мыңбұлақ
+16.Салық жинауғабекіткенжергіліктіадамдарғаатақберілді: «селиф»
+17.Шегуқағанбилікетті:610-618 жж.
+18.Тонқағанбилікетті:618-630жж.
+19.Ел,халық дегенұғымдыбереді: «бұдун»
+
+
+
+
+
+
+
+2-вариант
+
+
+20.Шығыс түріктеріМонғолиядаөзмемлекетінқалпына келтірді:682 жылы
+21.Ябғу,шад,елтебер дегенатақтарберіліпотырды:Қағанруынаншыққанақсүйектерге
+22.Жергілікті жерлердеқағанныңнегізгітірегі:бектер
+23.Қарапайым халықтыатаған: «қарабұдундар»
+24.Түргеш қағанаты:704-756жж
+25.Қағанаттың негізгіжераумағы:Жетісуболды
+26.Түргеш қағанатыныңкішіордасы:ІлебойындағыКүнгітқаласы
+27.Түргеш қағанатыәкімшілікаймаққа бөлінді:20
+28.Өз қағандығыныңтәуелсіздігінұстапотыруүшінүшжақтыжүргізуге тура келді:Сұлуқағанға
+29.Тоқарстандағы арабтардыбіржолата талқандады:737 жылы
+30.Сұлу қағанға «сүзеген», «мүйіздіқаған» депайтқойды:арабтар
+31.Сұлу қағанөзқолбасшысыБағатарханныңопасыздығынанқазаболды:Навакетқаласында
+32.Қарлұқтар мен арабтарқытайәскерлерінекүйретесоққы берді:751 жылы,Атлахшайқасы
+33.Түргешқағандығы құлады:756 жылы
+34.Қарлұқ қағанатыныңбилегенжылдары: 756-940  жж.
+35.Қарлұқ қағанатыныңорталығы: Суябқаласы
+36. «ҚарлұктарбұрынТулистауындатұрдыжәнетоғыз –оғыздарғақұлболды»Әл-Марвазидің  еңбегінде:
+37. 9 ғасырда Қарлұқтар жеңілістапты:  Ұйғырқағанатынан
+38. Қарлұқтар мен қырғыздар Ұйғыр қағанатынтас-талқанетіпжеңеді: 840 жылы
+39.Қарлұқтар еліндеболды: 25 қаламенқоныс
+3-вариант
+
+
+
+40.Оғыз мемлекетініңбилегенуақыты: IX ғасырдыңсоңы - IX ғасырдыңортасы
+41.Оғыз мемлекетініңорталығыболды: ЯнгиКент (ЖаңаГузия) қаласы
+42.Махмуд Қашғари еңбегіндежазды: оғыздаралғаш 24 тайпадантұрды
+43.Әл-Марвази еңбегіндежазды: оғыздаралғаш 12 тайпадантұрды
+44.Оғыздарда жоғарғыбилікиесі: жабғудегенлауазымдыиемденді
+45.Жабғудың орнын:иналаттымұрагерлербасты
+46.Иналды жабғудыңарнайытағайындапқойғанадамы: атабектертәрбиелеген
+47.Жабғу әйелдеріне: қатындегенатақберілді
+48.Әскербасы: сюбашы
+49.Жабғудың кеңесшілері: күл-еркіндер
+50.Шонжарлардың кеңесікүнделіктіөмірдебастымәнгеиеболды: қаңқаш
+51.Оғыздарда тайпалықжәнерулықбөлімшелерболды: бой, оба, көк
+52.Оғыз жабғуы Киев кінәзіСвятославпенХазарларғақарсыәскеріодаққұрды: 965 жылы
+53.Араб жазбаларындажазды: Қойларықұйрықтыкеледідеп
+54.Түркістан аймағындағыоғыздардыңелтіріберетінқойлардыкөпөсіретінінжазды: Ибн Хаукәл
+55.Қимақ қағанатыныңбилегегенуақыты: IXғасырдыңсоңы-  XIғасырдың басы
+56.Қимақ қағанаттыңорталығы: Имақияқаласы
+57.ҚимаққағанаттыңЕкіншіастанасы: АлакөлкөлініңжағасындағыКарантияқаласы
+58.Қағанатты билеушіадамды:  қаған
+59.Қаған атағынанекісатытөмен: ябғуатағы
+60.Жеке тайпакөсемдерінатады:шад-түтік
+61.Шонжарларға лауазымдарберілді:ябғу. Шад
+62.Xғасырбасындатоғыз ғұздардыңшекаралыққаласы: Жамлекес
+
+
+
+
+
+4-вариант
+
+
+
+63.VII-VIIIғасырларарасындабасталып,бітпейқалғанғимарат: Ақыртас
+64.Ақыртасғимараты766-893 жылдарарасында салынып,бітпейқалды: Қарлұққағанатыкезінде
+65.Қазақстан мен Қарақалпақстаншекарасыарасындаорналасқан: Білеуліғимараты
+66.Құдықүстінесалынғанқұрылысдегендібілдіреді: «Сардоба»
+67.БіркүмбездіжәнекөпкүмбездіМырзарабатсардобасы,Яккасардобағимаратысалынған:Мырзашөлкеруенжолыныңбойында
+68.Құрылысжүйесікиізүйгеұқсас:Дыңескерткіштері
+69.Дыңескерткішібасымболған:Қимақхандығы мен Қарлұққағанатыкезінде
+70.Дыңескерткішітұрғызылған: қазаболғанадамды жерлегенжерге
+71.Будда ғибадатханаларыныңорындарытабылған: Ақбешім,Суябсияқтықалалардан
+72.Сыртқыкөрінісіжартылайсфератәрізді бес күмбездентұрады: Баба-Атамешіті
+73.Тасмүсіндердіатаған: «блбл»,»кемпіртас», «таскелін»
+74.Көнетүрікәліпбиі тұрады:35 әріптентұрады
+75.«Отызұланныңадалдостары!Мешінжылы,елде,жиырмада (еді)»деген хабар жазылған: «Талас жазуы»
+76.Жалпыкөнетүріктіліндетабылғанжәдігерлер: 200-ден астам
+77.Түріктердіңжазбаәдебиетідүниегекелді: VIIIғасырда
+
+                                     5-вариант                                                                                             78.Қорқытата кітабы:12 жырдыңқосындысынантұрады
+79.Қорқыткүмбезідегенескерткішбар:Қызылордаоблысында
+80.ОғызнаманыңескінұсқасынXIIIғасырдажазыпқалдырған: Рашид ад Дин
+81.Оғызнаманытолықаяқтаған:Әбілғазы хан XVIIғасырда
+82.Түріктерде «отбасынашапағатынтигізеді» дептабынған: Ұмайанаға
+84.Мемлекеттіңнегізін (915-955жж.) қалады: СатұқБоғрахан
+85.Жоғарғыөкіметбилігіқолындаболған: Қағанның
+86. Билік иелері қатарына ханның ұрпақтары жатты: тегіндер, ілік хандар, бектер, нөкерлер
+87. .Дін басылар мен әскербасылардың жерлерін атады: Вакфтық жерлер
+88. Жер иеленудің бір түрі: иқта
+89. Иеленушілерді атады: иқтадар
+90. Қарахан мемлекеті кезіндегі қанаудың бір түрі: коммендация
+91.  Билікті 955 жылы ханның баласы  алады: Мұса
+92. Мемлекеттің орталығы:  Қашғар қаласы
+93. Қарахандардың бүкіл Сырдария бойындағы билігін мойындаған және оған көмекке келген: Васаллы
+94.  Самарқан қаласына жақын Қатуан даласында болған шайқаста салжұқтар мен  қарахан әскерлерін ойсырата жеңеді; Қарақытайлар 1941 жылы
+95. Қарахан мемлекеті құлады: 1212 жылы
+96.Найман: сегіз дегенді білдіреді
+97. Найман мемлекітінің аты шыға бастаған кезі: XII ғасырдың екінші жартысы
+98.Найман мемлекітінің Орталығы: Орхон өзенінің бойындағы Балықты қаласы
+99. Ханның інісі өзінің қабілеттілігімен көзге түседі: Инанч-Білге
+100. Сондықтан халық оған атақ берді: Білге хан
+101. Білгехан дүнеден қайтқаннан кейін оның екі ұлы арасында билік үшін талас басталды: Бұйрық хан мен Даян хан
+102. Наймандардың әлсіреуін күтіп жүрген монғол ханы Шыңғысхан мен керейіттер ханы Ваншабуыл жасап, жеңеді: Бұйрықты
+
+
+
+                                             6-вариант
+
+103. Керейіт мемлекетінің орталығы: Битөбе
+104. Керейіт мемлекетінің шарықтауы:  Маркус пен оның баласы Құршақұз хандар кезі
+105. Шыңғысханның  жалайыр тайпасының ішіндегі ең жақын адамы атақты шешен, ақын, әрі батыр: Мұқылай
+106. Шежірелерде жалайыр  ... Шыңғысханның бірде андасы – қан шығарып серттескен ең жақын досы ретінде, бірде оның жансызы ретінде, бірде қас жауы ретінде көрінеді: Жамұқа
+107. Аргун өзеінің бойында құрылтай шақырып, озін «гурхан» жариялап, таққа отырды: Жамұқа 1201 жылы
+108. Қыпшақ қағандығының өмір сүрген уақыты: XI-XIII  ғасырдың басы
+109. Тайпалардың ішінде ең беделдісі Болды: бөрілер, қыпшақ хандары осы тайпадан шығып отырды
+110.  Плано Карпинидің дерегі бойынша: қаңлылар кыпшықша сойлеген
+111. Хандық биліктің орталығы :  орда
+112. Әскери басқару жүйесі бөлінді: оң және сол қанат
+113. Оң қанатттың ордасы: Сарайшық қаласы
+114. Сол қанаттың орталығы: Сырдария бойындағы Сығанақ қаласы
+115.: хандар, тархандар, басқақтар, бектер, байлар,  ру-тайпа көсемдеріАқсүйек шоңжарларға жатты
+116. Махмұд Қашғаридің дерегі бойынша :  кыпшақша құлды «яланкуг»  деп атаған
+117. Қазақстанда болған саяхатшылар қыпшақтардың арба үстіне тігілген үйлерін 10 немесе 22 өгіз тартатындығын өз көздерімен көрген саяхатшылар  П.Карпини мен Г.Рубрук:
+118.  Петахья өзінің жазбаларында: қыпшақтардың тары мен күрішті көп өсіргендігін жазды
+119.: Қыпшақтар аздап бидай, арпа өсіреді, көп өсіретіні – тары, деп жазды Әл-Омари айтты
+
 </pre>
 </h1>
 <h2>
